<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="3">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/money"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="4dp"
        android:elevation="16dp"
        app:contentPadding="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/bg_screen2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/YourMoney"
            android:textColor="@android:color/white"
            android:id="@+id/money_text"
            android:layout_gravity="end"
            android:gravity="end"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="25sp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Manage your income, spends and savings at one place"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:id="@+id/loan"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="4dp"
        android:elevation="16dp"
        app:contentPadding="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/bg_screen3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/InvestmentPlaning"
                android:textColor="@android:color/white"
                android:layout_gravity="end"
                android:id="@+id/loan_text"
                android:gravity="end"
                android:padding="10dp"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="All loans and insurance from top banks and insurance companies"
                android:textColor="@android:color/white"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:textSize="15sp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:id="@+id/payment"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="4dp"
        android:elevation="16dp"
        app:contentPadding="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_screen4"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:id="@+id/payment_text"
                android:padding="5dp"
                android:text="@string/AllPaymentAndRecharge"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="Coming Soon"
                android:layout_gravity="bottom"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

<!--
    <Button
        android:id="@+id/money"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/yourmoney_banner"
        android:gravity="center"
        android:text="@string/YourMoney"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        />
-->

    <!--<Button
        android:id="@+id/loan"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/investment_banner"
        android:gravity="center"
        android:text="@string/InvestmentPlaning"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/payment"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/banner_recharge"
        android:gravity="center"
        android:text="@string/AllPaymentAndRecharge"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />-->
</LinearLayout>


